--- a/hdi/hdi_hr_payroll/views/hr_discipline_views.xml
+++ b/hdi/hdi_hr_payroll/views/hr_discipline_views.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Placeholder -->
+    
+    <record id="action_hr_discipline" model="ir.actions.act_window">
+        <field name="name">Kỷ luật</field>
+        <field name="res_model">hr.discipline</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
+    <record id="action_hr_reward" model="ir.actions.act_window">
+        <field name="name">Khen thưởng</field>
+        <field name="res_model">hr.reward</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
 </odoo>
