--- a/hdi/hdi_hr_payroll/views/hr_payslip_views.xml
+++ b/hdi/hdi_hr_payroll/views/hr_payslip_views.xml
@@ -1,5 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Tạo placeholder cho các action được ref trong menu -->
-    <!-- Sẽ được định nghĩa đầy đủ trong các file view tương ứng -->
+    
+    <!-- Tree View -->
+    <record id="view_hr_payslip_tree" model="ir.ui.view">
+        <field name="name">hr.payslip.tree</field>
+        <field name="model">hr.payslip</field>
+        <field name="arch" type="xml">
+            <tree string="Phiếu lương">
+                <field name="employee_id"/>
+                <field name="date_from"/>
+                <field name="date_to"/>
+                <field name="struct_id"/>
+                <field name="state"/>
+            </tree>
+        </field>
+    </record>
+
+    <!-- Form View -->
+    <record id="view_hr_payslip_form" model="ir.ui.view">
+        <field name="name">hr.payslip.form</field>
+        <field name="model">hr.payslip</field>
+        <field name="arch" type="xml">
+            <form string="Phiếu lương">
+                <header>
+                    <button name="compute_sheet" string="Tính lương" type="object" class="oe_highlight" invisible="state != 'draft'"/>
+                    <button name="action_payslip_done" string="Xác nhận" type="object" class="oe_highlight" invisible="state != 'verify'"/>
+                    <button name="action_payslip_cancel" string="Hủy" type="object" invisible="state not in ('draft', 'verify')"/>
+                    <field name="state" widget="statusbar"/>
+                </header>
+                <sheet>
+                    <group>
+                        <group>
+                            <field name="employee_id"/>
+                            <field name="contract_id"/>
+                            <field name="struct_id"/>
+                        </group>
+                        <group>
+                            <field name="date_from"/>
+                            <field name="date_to"/>
+                            <field name="standard_days"/>
+                        </group>
+                    </group>
+                    <notebook>
+                        <page string="Chi tiết lương">
+                            <field name="line_ids">
+                                <tree editable="bottom">
+                                    <field name="name"/>
+                                    <field name="code"/>
+                                    <field name="quantity"/>
+                                    <field name="rate"/>
+                                    <field name="amount"/>
+                                </tree>
+                            </field>
+                        </page>
+                        <page string="Ngày công">
+                            <field name="worked_days_line_ids">
+                                <tree editable="bottom">
+                                    <field name="name"/>
+                                    <field name="code"/>
+                                    <field name="number_of_days"/>
+                                    <field name="number_of_hours"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <!-- Action -->
+    <record id="action_hr_payslip" model="ir.actions.act_window">
+        <field name="name">Phiếu lương</field>
+        <field name="res_model">hr.payslip</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+
 </odoo>
