--- a/hdi/hdi_hr_payroll/views/hr_payslip_run_views.xml
+++ b/hdi/hdi_hr_payroll/views/hr_payslip_run_views.xml
@@ -4,7 +4,7 @@
     <record id="action_hr_payslip_run" model="ir.actions.act_window">
         <field name="name">Batch tính lương</field>
         <field name="res_model">hr.payslip.run</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
 </odoo>
