--- a/hdi/hdi_hr_payroll/views/hr_salary_rule_views.xml
+++ b/hdi/hdi_hr_payroll/views/hr_salary_rule_views.xml
@@ -4,13 +4,13 @@
     <record id="action_hr_salary_rule" model="ir.actions.act_window">
         <field name="name">Quy tắc tính lương</field>
         <field name="res_model">hr.salary.rule</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <record id="action_hr_payroll_structure" model="ir.actions.act_window">
         <field name="name">Cấu trúc lương</field>
         <field name="res_model">hr.payroll.structure</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
 </odoo>
