--- a/hdi/hdi_hr_payroll/views/hr_payslip_run_views.xml
+++ b/hdi/hdi_hr_payroll/views/hr_payslip_run_views.xml
@@ -1,6 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     
+    <!-- Tree View -->
+    <record id="view_hr_payslip_run_tree" model="ir.ui.view">
+        <field name="name">hr.payslip.run.tree</field>
+        <field name="model">hr.payslip.run</field>
+        <field name="arch" type="xml">
+            <list string="Batch tính lương">
+                <field name="name"/>
+                <field name="date_start"/>
+                <field name="date_end"/>
+                <field name="payslip_count"/>
+                <field name="state"/>
+            </list>
+        </field>
+    </record>
+
+    <!-- Form View -->
+    <record id="view_hr_payslip_run_form" model="ir.ui.view">
+        <field name="name">hr.payslip.run.form</field>
+        <field name="model">hr.payslip.run</field>
+        <field name="arch" type="xml">
+            <form string="Batch tính lương">
+                <header>
+                    <button name="action_create_payslips" string="Tạo phiếu lương" type="object" class="oe_highlight" invisible="state != 'draft'"/>
+                    <button name="action_close" string="Đóng batch" type="object" class="oe_highlight" invisible="state != 'draft'"/>
+                    <button name="action_draft" string="Mở lại" type="object" invisible="state == 'draft'"/>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,close"/>
+                </header>
+                <sheet>
+                    <div class="oe_button_box" name="button_box">
+                        <button name="action_open_payslips" type="object" class="oe_stat_button" icon="fa-list">
+                            <field name="payslip_count" widget="statinfo" string="Phiếu lương"/>
+                        </button>
+                    </div>
+                    <group>
+                        <group>
+                            <field name="name"/>
+                            <field name="company_id" groups="base.group_multi_company"/>
+                        </group>
+                        <group>
+                            <field name="date_start"/>
+                            <field name="date_end"/>
+                        </group>
+                    </group>
+                    <notebook>
+                        <page string="Phiếu lương">
+                            <field name="slip_ids">
+                                <list>
+                                    <field name="employee_id"/>
+                                    <field name="date_from"/>
+                                    <field name="date_to"/>
+                                    <field name="state"/>
+                                </list>
+                            </field>
+                        </page>
+                        <page string="Ghi chú">
+                            <field name="note" placeholder="Ghi chú về batch này..."/>
+                        </page>
+                    </notebook>
+                </sheet>
+                <chatter/>
+            </form>
+        </field>
+    </record>
+
+    <!-- Action -->
     <record id="action_hr_payslip_run" model="ir.actions.act_window">
         <field name="name">Batch tính lương</field>
         <field name="res_model">hr.payslip.run</field>
