--- a/hdi/hdi_hr_payroll/views/menu.xml
+++ b/hdi/hdi_hr_payroll/views/menu.xml
@@ -20,11 +20,11 @@
         action="action_hr_payslip"
         sequence="1"/>
     
-    <menuitem id="menu_hr_payslip_run"
-        name="Batch tính lương"
-        parent="menu_hr_payroll_payslips"
-        action="action_hr_payslip_run"
-        sequence="2"/>
+<!--    <menuitem id="menu_hr_payslip_run"-->
+<!--        name="Batch tính lương"-->
+<!--        parent="menu_hr_payroll_payslips"-->
+<!--        action="action_hr_payslip_run"-->
+<!--        sequence="2"/>-->
     
     <!-- Configuration -->
     <menuitem id="menu_hr_payroll_config"
