--- a/hdi/hdi_hr_payroll/views/hr_payslip_views.xml
+++ b/hdi/hdi_hr_payroll/views/hr_payslip_views.xml
@@ -61,12 +61,12 @@
                             <div class="alert alert-info" role="alert">
                                 <strong>💡 Hướng dẫn:</strong> Nhập các khoản bổ sung:
                                 <ul>
-                                    <li><b>PERFORMANCE</b> - Lương năng suất/ngày (sẽ nhân với công thực tế)</li>
+                                    <li><b>PERFORMANCE</b> - Tổng lương năng suất (hệ thống tự tính theo công thực tế)</li>
                                     <li><b>BONUS</b> - Thưởng</li>
                                     <li><b>DEDUCTION</b> - Phạt</li>
                                     <li><b>ADVANCE</b> - Tạm ứng</li>
                                 </ul>
-                                <p class="mb-0"><i>VD: Nhập PERFORMANCE = 300,000 với 20 công → Nhận 6,000,000</i></p>
+                                <p class="mb-0"><i>VD: Nhập PERFORMANCE = 5,000,000 với 20/22.5 công → Nhận 4,444,444</i></p>
                             </div>
                             <field name="input_line_ids">
                                 <list editable="bottom">
